<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<packaging>jar</packaging>

	<parent>
		<artifactId>ss7-parent</artifactId>
		<groupId>com.mobius-software.telco.protocols.ss7</groupId>
		<version>8.0.0-SNAPSHOT</version>
	</parent>

	<groupId>com.mobius-software.telco.protocols.ss7.common</groupId>
	<artifactId>common</artifactId>
	<name>Corsac jSS7 :: Commons :: ${project.artifactId}</name>

	<dependencies>
                <dependency>
                        <groupId>log4j</groupId>
                        <artifactId>log4j</artifactId>
                        <scope>provided</scope>
                </dependency>
                <!-- netty -->
				<dependency>
					<groupId>io.netty</groupId>
					<artifactId>netty-all</artifactId>
					<version>${netty.version}</version>
				</dependency>
				<dependency>
			      	<groupId>junit</groupId>
			      	<artifactId>junit</artifactId>
			      	<scope>test</scope>
			    </dependency>
	</dependencies>

	<!--  -->
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
				<executions>									
					<execution>
						<id>compiler-project</id>	
						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>
			</plugin>			
		</plugins>
		<finalName>async-commons-${project.version}</finalName>
	</build>

</project>
